# partitiontest

./: .gitignore  AUTHORS  LoggingAndCheckpointing.md  Makefile  Makefile.PHYML  Makefile.PLL  Makefile.am  ProjectHome.md  README  configure.ac  doxygen.cfg  partitiontest.cfg
PHYML/: cl.c  config.h  lk.c  main.h  mcmc.c  partest_to_phyml.c  partest_to_phyml.h  simu.c  utilities.c
PLL/: axml.h  evaluateGenericSpecial.c  fastDNAparsimony.c  lexer.c  lexer.h  mem_alloc.c  newviewGenericSpecial.c  optimizeModel.c  pll.h  searchAlgo.c  treeIO.c  utils.c
PLL/parser/newick/: newick.c  newick.h
PLL/parser/phylip/: phylip.c  phylip.h
examples/dna/: birds.conf  birds.phy  channa.conf  channa.phy
examples/protein/: tiny.conf  tiny.phy
libpll/include/: pll.h  pllInternal.h
man/: Makefile.am  partest-mpi.1  partest-parser.1  partest.1
manual/: manual.tex
mpi/: Makefile.am
src/: Makefile.am  PartitionTest.cpp  PartitionTest.h  PartitionTestParser.cpp  PartitionTestParser.h  config.h  globals.c  partitiontest.cpp
src/exe/: ModelOptimize.cpp  ModelOptimize.h  ModelSelector.cpp  ModelSelector.h  PLLModelOptimize.cpp  PLLModelOptimize.h  PartitionSelector.cpp  PartitionSelector.h  PhymlModelOptimize.cpp  PhymlModelOptimize.h
src/indata/: Alignment.cpp  Alignment.h  PLLAlignment.cpp  PLLAlignment.h  Partition.cpp  Partition.h  PartitionElement.cpp  PartitionElement.h  PartitionManager.cpp  PartitionManager.h  PartitionMap.cpp  PartitionMap.h  PartitioningScheme.cpp  PartitioningScheme.h  PhymlAlignment.cpp  PhymlAlignment.h  PllTreeManager.cpp  PllTreeManager.h  TreeManager.cpp  TreeManager.h
src/model/: Model.cpp  Model.h  ModelSet.cpp  ModelSet.h  NucleicModel.cpp  NucleicModel.h  ProteicModel.cpp  ProteicModel.h  SelectionModel.cpp  SelectionModel.h
src/observer/: ConsoleObserver.cpp  ConsoleObserver.h  Observable.cpp  Observable.h  Observer.h
src/options/: ParTestOptions.cpp  ParTestOptions.h
src/parser/: ArgumentParser.cpp  ArgumentParser.h  ConfigParser.cpp  ConfigParser.h  INIReader.cpp  INIReader.h  IniParser.cpp  IniParser.h
src/partestParserUtils/: PartestParserUtils.cpp  PartestParserUtils.h
src/search/: ExhaustiveSearchAlgorithm.cpp  ExhaustiveSearchAlgorithm.h  GreedySearchAlgorithm.cpp  GreedySearchAlgorithm.h  HierarchicalClusteringSearchAlgorithm.cpp  HierarchicalClusteringSearchAlgorithm.h  HierarchicalSearchAlgorithm.cpp  HierarchicalSearchAlgorithm.h  RandomSearchAlgorithm.cpp  RandomSearchAlgorithm.h  SearchAlgorithm.cpp  SearchAlgorithm.h
src/selection/: ModelSelector.cpp  ModelSelector.h  PartitionSelector.cpp  PartitionSelector.h  SelectionModel.cpp  SelectionModel.h
src/util/: FileUtilities.cpp  FileUtilities.h  GlobalDefs.cpp  GlobalDefs.h  ParTestFactory.cpp  ParTestFactory.h  PrintMeta.cpp  PrintMeta.h  Stirling.cpp  Stirling.h  Utilities.cpp  Utilities.h
test/: build_simdata-aa.sh  build_simdata-dna.sh  build_simdata.sh
test-scripts/: .RData  .Rhistory  build.sh
test-scripts/R-scripts/: build_models.r  build_models.r~  clustering.r  data-aa.in  data-dna.in  models.r  truncated.r
test/scripts/: build_models-dna.r  build_models-simple.r  build_models.r  clustering.r  data.11.in
