bin_PROGRAMS = partest
partest_CPPFLAGS = -I/usr/local/include/pll -Wall
partest_LDFLAGS = -I/usr/local/include/pll
partest_SOURCES = \
	exe/ModelOptimize.cpp \
	exe/ModelSelector.cpp \
	exe/PartitionSelector.cpp \
	indata/PartitionMap.cpp \
	indata/PartitionElement.cpp \
	indata/PartitioningScheme.cpp \
	model/Model.cpp \
	model/NucleicModel.cpp \
	model/ProteicModel.cpp \
	model/SelectionModel.cpp \
	parser/ArgumentParser.cpp \
	parser/ConfigParser.cpp \
	parser/INIReader.cpp \
	search/SearchAlgorithm.cpp \
	search/ExhaustiveSearchAlgorithm.cpp \
	search/HierarchicalClusteringSearchAlgorithm.cpp \
	search/GreedySearchAlgorithm.cpp \
	search/RandomSearchAlgorithm.cpp \
	util/Utilities.cpp \
	util/GlobalDefs.cpp \
	util/PrintMeta.cpp \
	PartitionTest.cpp
